tiny adjestements in swagger
